--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html>
+<head>
+	<title>Lucy's Kitchen</title>
+	</head>
 <body>
 <h1>Welcome to Lucy's Kitchen!</h1>
+<img src = "img/food/sushi.JPG">
+<img src = "img/food/friedrice.jpg">
+<img src = "img/food/kimchi.HEIC">
 </body>
 </html>
