--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	</head>
 <body>
 <h1>Welcome to Lucy's Kitchen!</h1>
-<img src = "img/food/sushi.JPG">
-<img src = "img/food/friedrice.jpg">
-<img src = "img/food/kimchi.HEIC">
+<img src = "/img/food/sushi.JPG" height = "100pt">
+<img src = "/img/food/friedrice.jpg" height = "100pt">
+<img src = "/img/food/kimchi.HEIC" height = "100pt">
 </body>
 </html>
