--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Lucy's Kitchen</title>
+	<link href="style.css" rel="stylesheet">
 	</head>
 <body>
 <h1>Welcome to Lucy's Kitchen!</h1>
-<img src = "/img/food/sushi.JPG" height = "100pt">
-<img src = "/img/food/friedrice.jpg" height = "100pt">
-<img src = "/img/food/kimchi.HEIC" height = "100pt">
+<img src = "/img/food/sushi.JPG" class = "foodpic">
+<img src = "/img/food/friedrice.jpg" class = "foodpic">
+<img src = "/img/food/kimchi.HEIC" class = "foodpic">
 </body>
 </html>
