--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h1>Welcome to Lucy's Kitchen!</h1>
 <img src = "/img/food/sushi.JPG" class = "foodpic">
 <img src = "/img/food/friedrice.jpg" class = "foodpic">
-<img src = "/img/food/kimchi.HEIC" class = "foodpic">
+<img src = "/img/food/kimchi.jpg" class = "foodpic">
 </body>
 </html>
