--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<link href="style.css" rel="stylesheet">
 	</head>
 <body>
+	<div>
+<a href = "">Recipies</a>
+<a href = "">Photography</a>
+<a href = "">Garden</a>
+</div>
 <h1>Welcome to Lucy's Kitchen!</h1>
 <img src = "/img/food/sushi.JPG" class = "foodpic">
 <img src = "/img/food/friedrice.jpg" class = "foodpic">
