--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Lucy's Kitchen</title>
-	<link href="style.css" rel="stylesheet">
+	<link href="/style.css" rel="stylesheet">
 	</head>
 <body>
-	<div>
+	<div class = "nav">
 <a href = "">Recipies</a>
 <a href = "">Photography</a>
 <a href = "">Garden</a>
