--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html>
 <head>
 	<title>Lucy's Kitchen</title>
-	<link href="/style.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 	</head>
-<body>
+<body class  = "b">
 	<div class = "nav">
-<a href = "">Recipies</a>
-<a href = "">Photography</a>
-<a href = "">Garden</a>
+	<div class = "nav">
+<a href = "https://lucywan.github.io/lucyskitchen/index.html">Recipies</a>
+<a href = "https://lucywan.github.io/lucyskitchen/phtography.html">Photography</a>
+<a href = "https://lucywan.github.io/lucyskitchen/gardening.html">Garden</a>
 </div>
-<h1>Welcome to Lucy's Kitchen!</h1>
-<img src = "/img/food/sushi.JPG" class = "foodpic">
-<img src = "/img/food/friedrice.jpg" class = "foodpic">
-<img src = "/img/food/kimchi.jpg" class = "foodpic">
+</div>
+<h1 class = "header" align = "center">Welcome to Lucy's Kitchen!</h1>
+
+<img src = "img/food/friedrice.jpg" class = "foodpic">
+<img src = "img/food/kimchi.jpg" class = "foodpic">
+<img src = "img/food/sushi.jpg" class = "foodpic">
 </body>
 </html>
