--- a/photography.html
+++ b/photography.html
@@ -6,9 +6,9 @@
 	</head>
 <body class  = "b">
 	<div class = "nav">
-<a href = "index.html">Recipies</a>
-<a href = "photography.html">Photography</a>
-<a href = "gardening.html">Garden</a>
+<a href = "https://lucywan.github.io/lucyskitchen/index.html">Recipies</a>
+<a href = "https://lucywan.github.io/lucyskitchen/photography.html">Photography</a>
+<a href = "https://lucywan.github.io/lucyskitchen/gardening.html">Garden</a>
 </div>
 <h1 class = "header" align = "center">Welcome to Lucy's Kitchen!</h1>
 
