--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 	<div class = "nav">
 	<div class = "nav">
 <a href = "https://lucywan.github.io/lucyskitchen/index.html">Recipies</a>
-<a href = "https://lucywan.github.io/lucyskitchen/phtography.html">Photography</a>
+<a href = "https://lucywan.github.io/lucyskitchen/photography.html">Photography</a>
 <a href = "https://lucywan.github.io/lucyskitchen/gardening.html">Garden</a>
 </div>
 </div>
 <h1 class = "header" align = "center">Welcome to Lucy's Kitchen!</h1>
 
-<img src = "img/food/friedrice.jpg" class = "foodpic">
+<a href = "recipies/kimchi.html"><img src = "img/food/friedrice.jpg" class = "foodpic"></a>
 <img src = "img/food/kimchi.jpg" class = "foodpic">
 <img src = "img/food/sushi.jpg" class = "foodpic">
+<img src = "img/food/kimquatbread.jpg" class = "foodpic">
 </body>
 </html>
