--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 <a href = "recipies/kimchi.html"><img src = "img/food/friedrice.jpg" class = "foodpic"></a>
 <img src = "img/food/kimchi.jpg" class = "foodpic">
 <img src = "img/food/sushi.jpg" class = "foodpic">
-<img src = "img/food/kimquatbread.jpg" class = "foodpic">
+<img src = "img/food/kumquatbread.jpg" class = "foodpic">
 </body>
 </html>
