--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </div>
 <h1 class = "header" align = "center">Welcome to Lucy's Kitchen!</h1>
 
-<a href = "recipies/kimchi.html"><img src = "img/food/friedrice.jpg" class = "foodpic"></a>
-<img src = "img/food/kimchi.jpg" class = "foodpic">
+<a href = "recipies/kimchi.html"><img src = "img/food/kimchi.jpg" class = "foodpic"></a>
+<img src = "img/food/friedrice.jpg" class = "foodpic">
 <img src = "img/food/sushi.jpg" class = "foodpic">
 <img src = "img/food/kumquatbread.jpg" class = "foodpic">
 </body>
