--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
 	<title>Lucy's Kitchen</title>
 	<link href="style.css" rel="stylesheet">
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="displayimg.js"></script>
+
 	</head>
 <body class  = "b">
 	<div class = "nav">
 	<div class = "nav">
-<a href = "https://lucywan.github.io/lucyskitchen/index.html">Recipies</a>
-<a href = "https://lucywan.github.io/lucyskitchen/photography.html">Photography</a>
-<a href = "https://lucywan.github.io/lucyskitchen/gardening.html">Garden</a>
+<a href = "index.html">Recipies</a>
+<a href = "photography.html">Photography</a>
+<a href = "gardening.html">Gardening</a>
 </div>
 </div>
 <h1 class = "header" align = "center">Welcome to Lucy's Kitchen!</h1>
