--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
 	<title>Lucy's Kitchen</title>
 	<link href="style.css" rel="stylesheet">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="displayimg.js"></script>
+
+	
 
 	</head>
 <body class  = "b">
-	<div class = "nav">
 	<div class = "nav">
 <a href = "index.html">Recipies</a>
 <a href = "photography.html">Photography</a>
 <a href = "gardening.html">Gardening</a>
 </div>
-</div>
-<h1 class = "header" align = "center">Welcome to Lucy's Kitchen!</h1>
+
+<div class = "headcontainer">
+		<div class ="header"><h1 align = "center"> Welcome to Lucy's Kitchen! </h1></div>
+		</div>
 
 <a href = "recipies/kimchi.html"><img src = "img/food/kimchi.jpg" class = "foodpic"></a>
 <img src = "img/food/friedrice.jpg" class = "foodpic">
 <img src = "img/food/sushi.jpg" class = "foodpic">
 <img src = "img/food/kumquatbread.jpg" class = "foodpic">
+
 </body>
 </html>
