--- a/photography.html
+++ b/photography.html
@@ -3,18 +3,27 @@
 <head>
 	<title>Lucy's Kitchen</title>
 	<link href="style.css" rel="stylesheet">
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+			<script src="img/displaypics.js"></script>
 	</head>
 <body class  = "b">
 	<div class = "nav">
 <a href = "index.html">Recipies</a>
 <a href = "photography.html">Photography</a>
-<a href = "gardening.html">Garden</a>
+<a href = "gardening.html">Gardening</a>
 </div>
 <h1 class = "header" align = "center">Welcome to Lucy's Kitchen!</h1>
 
-<img src = "img/beach/IMG_6510.jpg" class = "foodpic">
-<img src = "img/beach/IMG_6508.jpg" class = "foodpic">
-<img src = "img/beach/IMG_6507.jpg" class = "foodpic">
+<div class = "nav">
+<a href = "index.html">Recipies</a>
+<a href = "photography.html">Photography</a>
+<a href = "gardening.html">Gardening</a>
+</div>
+
+<script>beaches();</script>
+<script>berkeley();</script>
+<script>cats();</script>
+<script>wildlife();</script>
 
 
 </body>
