--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
 	
 
 	</head>
+
+<style>
+	#rec {
+		color: white;
+	}
+</style>
+
 <body class  = "b">
 	<div class = "nav">
-<a href = "index.html">Recipies</a>
-<a href = "photography.html">Photography</a>
-<a href = "gardening.html">Gardening</a>
+<a href = "index.html" id = "rec">Recipies</a>
+<a> | </a>
+<a href = "photography.html" id = "phot">Photography</a>
+<a> | </a>
+<a href = "gardening.html" id = "gar">Gardening</a>
 </div>
 
-<div class = "headcontainer">
-		<div class ="header"><h1 align = "center"> Welcome to Lucy's Kitchen! </h1></div>
+
+<div class = "head">
+		
+<div class ="head2"><h1> Welcome to Lucy's Kitchen! </h1></div>
 		</div>
 
 <a href = "recipies/kimchi.html"><img src = "img/food/kimchi.jpg" class = "foodpic"></a>
