--- a/photography.html
+++ b/photography.html
@@ -6,19 +6,23 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 			<script src="img/displaypics.js"></script>
 	</head>
+	<style>
+	#phot {
+		color: white;
+	}
+</style>
 <body class  = "b">
-	<div class = "nav">
-<a href = "index.html">Recipies</a>
-<a href = "photography.html">Photography</a>
-<a href = "gardening.html">Gardening</a>
-</div>
-<h1 class = "header" align = "center">Welcome to Lucy's Kitchen!</h1>
-
 <div class = "nav">
-<a href = "index.html">Recipies</a>
-<a href = "photography.html">Photography</a>
-<a href = "gardening.html">Gardening</a>
+<a href = "index.html" id = "rec">Recipies</a>
+<a> | </a>
+<a href = "photography.html" id = "phot">Photography</a>
+<a> | </a>
+<a href = "gardening.html" id = "gar">Gardening</a>
 </div>
+<div class = "head">
+		
+<div class ="head2"><h1> Welcome to Lucy's Kitchen! </h1></div>
+		</div>
 
 <script>beaches();</script>
 <script>berkeley();</script>
