--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 <div class ="head2"><h1> Welcome to Lucy's Kitchen! </h1></div>
 		</div>
 
+<div class = "imgcon">
+	<div class = "imgcon2">
 <a href = "recipies/kimchi.html"><img src = "img/food/kimchi.jpg" class = "foodpic"></a>
-<img src = "img/food/friedrice.jpg" class = "foodpic">
-<img src = "img/food/sushi.jpg" class = "foodpic">
-<img src = "img/food/kumquatbread.jpg" class = "foodpic">
-
+<a><img src = "img/food/friedrice.jpg" class = "foodpic"></a>
+<a><img src = "img/food/sushi.jpg" class = "foodpic"></a>
+<a><img src = "img/food/kumquatbread.jpg" class = "foodpic"></a>
+</div>
+</div>
 </body>
 </html>
