--- a/photography.html
+++ b/photography.html
@@ -23,12 +23,45 @@
 		
 <div class ="head2"><h1> Welcome to Lucy's Kitchen! </h1></div>
 		</div>
+<div class = "imgcon">
+<!-- beaches -->
+<a><img src='img/beach/IMG_6282.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6510.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6669_2.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6679_2.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6373.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6512.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6672_2.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6681_2.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6507.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6513.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6676_2.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6685_2.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6508.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6515.jpg' class = 'foodpic beach'></a>
+<a><img src='img/beach/IMG_6678_2.jpg' class = 'foodpic beach'></a>
 
-<script>beaches();</script>
-<script>berkeley();</script>
-<script>cats();</script>
-<script>wildlife();</script>
+<!-- berkeley -->
+<a><img src='img/berkeley/IMG_5962.jpg' class = 'foodpic berkeley'></a>
+<a><img src='img/berkeley/IMG_6034.jpg' class = 'foodpic berkeley'></a>
 
+<!-- cats -->
+<a><img src='img/cats/60678782839__262FAB31-56EC-414C-B59A-407D063807A4.JPG' class = 'foodpic cats'></a>
+<a><img src='img/cats/60678782839__262FAB31-56EC-414C-B59A-407D063807A4.JPG' class = 'foodpic cats'></a>
 
+<!-- wildlife -->
+<a><img src='img/wildlife/IMG_6218.jpg' class = 'foodpic wildlife'></a>
+
+<!-- script -->
+<!-- m = ["IMG_6218.jpg"]
+f = "img/wildlife/"
+c = "wildlife"
+def d(m, f, c):
+    for i in m:
+        print("<a><img src='"+ f + i +"' class = 'foodpic "+c+"'></a>")
+        
+d(m,f, c) -->
+
+</div>
 </body>
 </html>
