--- a/gardening.html
+++ b/gardening.html
@@ -23,9 +23,12 @@
 		
 <div class ="head2"><h1> Welcome to Lucy's Kitchen! </h1></div>
 		</div>
-
-
-
+<div class = "imgcon">
+<div class = "con"
+<a><img src='img/gardening/seedstarts.jpg' class = 'foodpic'></a>
+<div class="overlay">My Name is John</div>
+</div>
+</div>
 
 </body>
 </html>
