--- a/index.html
+++ b/index.html
@@ -28,12 +28,31 @@
 		
 <div class ="head2"><h1> Welcome to Lucy's Kitchen! </h1></div>
 		</div>
-
 <div class = "imgcon">
-<a href = "recipies/kimchi.html"><img src = "img/food/kimchi.jpg" class = "foodpic"></a>
-<a><img src = "img/food/friedrice.jpg" class = "foodpic"></a>
-<a><img src = "img/food/sushi.jpg" class = "foodpic"></a>
-<a><img src = "img/food/kumquatbread.jpg" class = "foodpic"></a>
+	<p style = "color: white; font-size: 15pt; padding:5px 60px;background-color: #3F000F;  display: inline-block;" align = center> all recipies are vegan</p>
+</div>
+<div class = "imgcon">
+	<a href = "recipies/kimchi.html"><div class = "con">
+<img src = "img/food/kimchi.jpg" class = "foodpic">
+<div class="overlay">~Kimchi~</div>
+</div></a>
+
+
+	<div class = "con">
+<img src = "img/food/friedrice.jpg" class = "foodpic">
+<div class="overlay">~Kimchi Fried Rice~</div>
+</div>
+
+	<div class = "con">
+<img src = "img/food/sushi.jpg" class = "foodpic">
+<div class="overlay">~Sushi - California Roll~</div>
+</div>
+
+	<div class = "con">
+<img src = "img/food/kumquatbread.jpg" class = "foodpic">
+<div class="overlay">~Kumquat Cake~</div>
+</div>
+
 </div>
 </body>
 </html>
