--- a/laguna.html
+++ b/laguna.html
@@ -27,8 +27,8 @@
 
 <div class = "imgcon">
 <ul id="filters">
-            <a href = "photography.html"><li><span class="filter active">All</span></li></a>
-            <a href = "laguna.html"><li><span class="filter">Laguna Beach</span></li></a>
+            <a href = "photography.html"><li><span class="filter">All</span></li></a>
+            <a href = "laguna.html"><li><span class="filter active">Laguna Beach</span></li></a>
             <a href = "berkeley.html"><li><span class="filter">Berkeley</span></li></a>
             <a href = "cats.html"><li><span class="filter">Cats</span></li></a>
             <a href = "wildlife.html"><li><span class="filter">Wildlife</span></li></a>
@@ -36,25 +36,13 @@
         </ul>
 </div>
 <div class = "imgcon">
-
-<!-- laguna -->
 <a><img src='img/beach/IMG_6282.jpg' class = 'foodpic beach'></a>
-<a><img src='img/beach/IMG_6510.jpg' class = 'foodpic beach'></a>
-<!-- berkeley -->
-<a><img src='img/berkeley/IMG_5962.jpg' class = 'foodpic berkeley'></a>
-<a><img src='img/berkeley/IMG_6034.jpg' class = 'foodpic berkeley'></a>
+<a><img src='img/beach/IMG_6672_2.jpg' class = 'foodpic beach'></a>
 
-<!-- cats -->
-<a><img src='img/cats/60678782839__262FAB31-56EC-414C-B59A-407D063807A4.JPG' class = 'foodpic cats'></a>
-
-<!-- wildlife -->
-<a><img src='img/wildlife/IMG_6218.jpg' class = 'foodpic wildlife'></a>
-<!-- laguna -->
 <a><img src='img/beach/IMG_6669_2.jpg' class = 'foodpic beach'></a>
 <a><img src='img/beach/IMG_6679_2.jpg' class = 'foodpic beach'></a>
 <a><img src='img/beach/IMG_6373.jpg' class = 'foodpic beach'></a>
 <a><img src='img/beach/IMG_6512.jpg' class = 'foodpic beach'></a>
-<a><img src='img/beach/IMG_6672_2.jpg' class = 'foodpic beach'></a>
 <a><img src='img/beach/IMG_6681_2.jpg' class = 'foodpic beach'></a>
 <a><img src='img/beach/IMG_6507.jpg' class = 'foodpic beach'></a>
 <a><img src='img/beach/IMG_6513.jpg' class = 'foodpic beach'></a>
@@ -63,7 +51,7 @@
 <a><img src='img/beach/IMG_6508.jpg' class = 'foodpic beach'></a>
 <a><img src='img/beach/IMG_6515.jpg' class = 'foodpic beach'></a>
 <a><img src='img/beach/IMG_6678_2.jpg' class = 'foodpic beach'></a>
-
+<a><img src='img/beach/IMG_6510.jpg' class = 'foodpic beach'></a>
 
 
 <!-- script -->
