--- a/gardening.html
+++ b/gardening.html
@@ -26,7 +26,7 @@
 <div class = "imgcon">
 <div class = "con"
 <a><img src='img/gardening/seedstarts.jpg' class = 'foodpic'></a>
-<div class="overlay">My Name is John</div>
+<div class="overlay">Window Pane Seed Starter</div>
 </div>
 </div>
 
