--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class ="head2"><h1> Welcome to Lucy's Kitchen! </h1></div>
 		</div>
 <div class = "imgcon">
-	<p style = "color: white; font-size: 15pt; padding:5px 60px;background-color: #3F000F;  display: inline-block;" align = center> all recipies are vegan</p>
+	<p style = "color: white; font-size: 15pt; padding:5px 60px;background-color: #3F000F;  display: inline-block;" align = center> all recipies are vegetarian</p>
 </div>
 <div class = "imgcon">
 	<a href = "recipies/kimchi.html"><div class = "con">
