--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Lucy's Kitchen</title>
 	<link href="style.css" rel="stylesheet">
-
+<!-- 	revisions: add footer (with contact), make kimchi recipie page nicer, add more recipies and steps to seed starter -->
 	
 
 	</head>
@@ -53,6 +53,16 @@
 <div class="overlay">~Kumquat Cake~</div>
 </div>
 
+	<div class = "con">
+<img src = "img/food/yogurt.jpg" class = "foodpic">
+<div class="overlay">~Plain Yogurt~</div>
 </div>
+
+</div>
+
+<div class = "footer">
+<p>Email: lucy.w@berkeley.edu</p>
+</div>
+
 </body>
 </html>
