--- a/recipies/kimchi.html
+++ b/recipies/kimchi.html
@@ -2,22 +2,38 @@
 <html>
 <head>
 	<title>Lucy's Kitchen</title>
-	<link href="style.css" rel="stylesheet">
+	<link href="../style.css" rel="stylesheet">
+<!-- 	revisions: add footer (with contact), make kimchi recipie page nicer, add more recipies and steps to seed starter -->
+	
+
 	</head>
+
+<style>
+	#rec {
+		color: white;
+	}
+</style>
+
 <body class  = "b">
 	<div class = "nav">
-	<div class = "nav">
-<a href = "https://lucywan.github.io/lucyskitchen/index.html">Recipies</a>
-<a href = "https://lucywan.github.io/lucyskitchen/photography.html">Photography</a>
-<a href = "https://lucywan.github.io/lucyskitchen/gardening.html">Garden</a>
+<a href = "../index.html" id = "rec">Recipies</a>
+<a> | </a>
+<a href = "../photography.html" id = "phot">Photography</a>
+<a> | </a>
+<a href = "../gardening.html" id = "gar">Gardening</a>
 </div>
-</div>
-<h1 class = "header" align = "center">Welcome to Lucy's Kitchen!</h1>
+
+
+<div class = "head">
+		
+<div class ="head2"><h1> Welcome to Lucy's Kitchen! </h1></div>
+		</div>
 
 <p>
 Adapted from <a href = "https://www.maangchi.com/recipe/tongbaechu-kimchi">Maangchi's Traditional Kimchi Recipie
 </a>
-
+<br>
+<br>
 Ingredients:
 <br>
 2 Napa Cabbages
@@ -38,7 +54,7 @@ Ingredients:
 <br>
 <br>
 
-Steps
+Steps:
 <br>
 1. Rinse the cabbage
 <br>
@@ -63,7 +79,9 @@ Steps
 11. Place kimchi in air tight container to allow for fermentation
 <br>
 
+<div class = "footer">
+<p>Email: lucy.w@berkeley.edu</p>
+</div>
 
-</p>
 </body>
 </html>
