--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
 </div>
 
-<div class = "footer">
+<!-- <div class = "footer">
 <p>Email: lucy.w@berkeley.edu</p>
-</div>
+</div> -->
 
 </body>
 </html>
