--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class  = "b">
 	<div class = "nav">
-<a href = "index.html" id = "rec">Recipies</a>
+<a href = "index.html" id = "rec">Recipes</a>
 <a> | </a>
 <a href = "photography.html" id = "phot">Photography</a>
 <a> | </a>
