--- a/cats.html
+++ b/cats.html
@@ -40,7 +40,7 @@
 <!-- cats -->
 <a><img src='img/cats/60678782839__262FAB31-56EC-414C-B59A-407D063807A4.JPG' class = 'foodpic cats'></a>
 
-<a><img src='img/balc.png' class = 'foodpic cats'></a>
+<a><img src='img/cats/balc.png' class = 'foodpic cats'></a>
 <!-- wildlife -->
 
 
