--- a/photography.html
+++ b/photography.html
@@ -49,7 +49,7 @@
 
 <!-- wildlife -->
 <a><img src='img/wildlife/IMG_6218.jpg' class = 'foodpic wildlife'></a>
-<a><img src='img/wildlife/balc.png' class = 'foodpic cats'></a>
+<a><img src='img/cats/balc.png' class = 'foodpic cats'></a>
 <!-- laguna -->
 <a><img src='img/beach/IMG_6669_2.jpg' class = 'foodpic beach'></a>
 <a><img src='img/beach/IMG_6679_2.jpg' class = 'foodpic beach'></a>
