--- a/berkeley.html
+++ b/berkeley.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Lucy's Kitchenette</title>
+	<title>Lucy's Kitchen</title>
 	<link href="style.css" rel="stylesheet">
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 			<script src="img/displaypics.js"></script>
