--- a/gardening.html
+++ b/gardening.html
@@ -25,8 +25,8 @@
 		</div>
 <div class = "imgcon">
 <div class = "con"
-<a><img src='img/gardening/seedstarts.jpg' class = 'foodpic'></a>
-<div class="overlay">Window Pane Seed Starter</div>
+<a><img src='img/gardening/morning_glory.jpeg' class = 'foodpic'></a>
+<div class="overlay">Morning GLory</div>
 </div>
 </div>
 
